force-app/main/default/objects/Mediation__c/Mediation__c.object-meta.xml
<CustomObject>
    <label>Mediação</label>
    <nameField>
        <displayFormat>Med-{0000000}</displayFormat>
        <label>Mediação Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mediações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>