force-app/main/default/objects/Mediation__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <externalId>true</externalId>
    <label>Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>