force-app/main/default/objects/Mediation__c/fields/ContractLookup__c.field-meta.xml
<CustomField>
    <fullName>ContractLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Mediações</relationshipLabel>
    <relationshipName>Mediations</relationshipName>
    <type>Lookup</type>
</CustomField>