force-app/main/default/objects/Mediation__c/fields/Despejo__c.field-meta.xml
<CustomField>
    <fullName>Despejo__c</fullName>
    <formula>IF(isEviction__c, &apos;Sim&apos;, &apos;Não&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Despejo</label>
    <type>Text</type>
</CustomField>