force-app/main/default/objects/Mediation__c/fields/flowSourceForSalesforce__c.field-meta.xml
<CustomField>
    <fullName>flowSourceForSalesforce__c</fullName>
    <label>Etapa da Jornada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXIT_INSPECTION_REVIEWED_BY_TENANT</fullName>
                <label>Mediação após primeira revisão</label>
            </value>
            <value>
                <fullName>EXIT_INSPECTION_TENANT_BUDGET_REVIEW_FINISHED</fullName>
                <label>Mediação após segunda revisão</label>
            </value>
            <value>
                <fullName>EXIT_INSPECTION_CONTESTATION_ANALYSIS_FINISHED</fullName>
                <label>Mediação compulsória</label>
            </value>
            <value>
                <fullName>EXIT_INSPECTION_REVIWED_BY_TENANT</fullName>
                <isActive>false</isActive>
                <label>EXIT_INSPECTION_REVIWED_BY_TENANT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>