force-app/main/default/objects/Mediation__c/fields/HighValue__c.field-meta.xml
<CustomField>
    <fullName>HighValue__c</fullName>
    <formula>IF(
  ISPICKVAL(ContractLookup__r.value_segment__c, &quot;high&quot;),
  &quot;Sim&quot;,
  &quot;Não&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Value</label>
    <type>Text</type>
</CustomField>