force-app/main/default/objects/Mediation__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <externalId>true</externalId>
    <label>Vistoria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>