force-app/main/default/objects/Mediation__c/fields/InspectionLookup__c.field-meta.xml
<CustomField>
    <fullName>InspectionLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vistoria</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>Mediações</relationshipLabel>
    <relationshipName>Mediations</relationshipName>
    <type>Lookup</type>
</CustomField>