force-app/main/default/objects/Mediation__c/fields/InspectionRecordTenantReview__c.field-meta.xml
<CustomField>
    <fullName>InspectionRecordTenantReview__c</fullName>
    <label>Resposta do Inquilino</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>Aprovou</label>
            </value>
            <value>
                <fullName>false</fullName>
                <label>Discordou</label>
            </value>
            <value>
                <fullName>null</fullName>
                <default>true</default>
                <label>Não interagiu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>