force-app/main/default/objects/Mediation__c/fields/IsDiscountRefused__c.field-meta.xml
<CustomField>
    <fullName>IsDiscountRefused__c</fullName>
    <label>Desconto recusado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
            <value>
                <fullName>null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>