force-app/main/default/objects/Mediation__c/fields/isEviction__c.field-meta.xml
<CustomField>
    <fullName>isEviction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEviction</label>
    <type>Checkbox</type>
</CustomField>