force-app/main/default/objects/Mediation__c/fields/isHighValue__c.field-meta.xml
<CustomField>
    <fullName>isHighValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHighValue</label>
    <type>Checkbox</type>
</CustomField>