force-app/main/default/objects/Mediation__c/fields/isPpMulti__c.field-meta.xml
<CustomField>
    <fullName>isPpMulti__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPpMulti</label>
    <type>Checkbox</type>
</CustomField>