force-app/main/default/objects/Mediation__c/fields/IsUndefinedItem__c.field-meta.xml
<CustomField>
    <fullName>IsUndefinedItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item de responsabilidade indefinida</label>
    <type>Checkbox</type>
</CustomField>