force-app/main/default/objects/Mediation__c/fields/JourneyStep__c.field-meta.xml
<CustomField>
    <fullName>JourneyStep__c</fullName>
    <label>Etapa da jornada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>first_review</fullName>
            </value>
            <value>
                <fullName>second_review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>