force-app/main/default/objects/Mediation__c/fields/MediationEventType__c.field-meta.xml
<CustomField>
    <fullName>MediationEventType__c</fullName>
    <label>Tipo de evento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXIT_INSPECTION_REVIEWED_BY_TENANT</fullName>
                <label>Mediação após primeira revisão</label>
            </value>
            <value>
                <fullName>EXIT_INSPECTION_TENANT_BUDGET_REVIEW_FINISHED</fullName>
                <label>Mediação após segunda revisão</label>
            </value>
            <value>
                <fullName>EXIT_INSPECTION_CONTESTATION_ANALYSIS_FINISHED</fullName>
                <label>Mediação compulsória</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>