force-app/main/default/objects/Mediation__c/fields/PpMulti__c.field-meta.xml
<CustomField>
    <fullName>PpMulti__c</fullName>
    <formula>IF(isPpMulti__c, &apos;Sim&apos;, &apos;Não&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PP Multi</label>
    <type>Text</type>
</CustomField>