force-app/main/default/objects/Mediation__c/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <externalId>true</externalId>
    <label>Rescisão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>