force-app/main/default/objects/Mediation__c/fields/TerminationLookup__c.field-meta.xml
<CustomField>
    <fullName>TerminationLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rescisão</label>
    <referenceTo>Termination__c</referenceTo>
    <relationshipLabel>Mediações</relationshipLabel>
    <relationshipName>Mediations</relationshipName>
    <type>Lookup</type>
</CustomField>